[gd_scene load_steps=3 format=3 uid="uid://b4qivx0cpksku"]

[ext_resource type="Script" uid="uid://cmnd0vcqma7yt" path="res://lib/ai_analyze.gd" id="1_2tfqs"]

[sub_resource type="Theme" id="Theme_2tfqs"]
default_font_size = 32

[node name="AiAnalyze" type="CanvasLayer"]
script = ExtResource("1_2tfqs")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Button" type="Button" parent="."]
offset_right = 176.0
offset_bottom = 64.0
text = "Analyze SFX with AI"

[node name="CenterContainer" type="CenterContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 192.0
offset_top = 72.0
offset_right = -312.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(900, 800)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ImportList" type="VBoxContainer" parent="CenterContainer/Panel/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = SubResource("Theme_2tfqs")
theme_override_constants/separation = 32

[node name="LoadingLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer/ScrollContainer/ImportList"]
unique_name_in_owner = true
layout_mode = 2
text = "Analyzing game... Please wait!"

[node name="Button" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "IMPORT"

[node name="Done" type="Panel" parent="CenterContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
theme = SubResource("Theme_2tfqs")

[node name="Label" type="Label" parent="CenterContainer/Done"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Finished Importing!"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/Button" to="." method="_on_import_pressed"]
